epdcallinfo-uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    meta.helm.sh/release-name: epdcallinfouat
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-02-06T09:39:02Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: epdcallinfouat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: epdcallinfouat
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: epdcallinfo-0.0.1uat
  name: epdcallinfouat
  namespace: default
  resourceVersion: "153348409"
  uid: 2a392812-2bd2-4308-9062-c1fd52ef2364
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: epdcallinfouat
      app.kubernetes.io/name: epdcallinfouat
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: epdcallinfouat
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: epdcallinfouat
        app.kubernetes.io/version: 0.0.1
        helm.sh/chart: epdcallinfouat-0.0.1
    spec:
      containers:
      - env:
        - name: SERVER_IP
          valueFrom:
            configMapKeyRef:
              key: SERVER_IP
              name: brix
        - name: REST_API_PORT
          valueFrom:
            configMapKeyRef:
              key: REST_API_PORT
              name: brix
        - name: REST_API_PORT_SSL
          valueFrom:
            configMapKeyRef:
              key: REST_API_PORT_SSL
              name: brix
        - name: DATABASE_HOST
          valueFrom:
            configMapKeyRef:
              key: DATABASE_HOST
              name: brix
        - name: DATABASE_PORT
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PORT
              name: brix
        - name: DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_NAME
              name: brix
        - name: DATABASE_USER
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USER
              name: brix
        - name: DATABASE_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: brix
        image: eptce-docker-hosted.forge.avaya.com/epdcallinfouat:0.0.1
        imagePullPolicy: IfNotPresent
        name: epdcallinfouat
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
