epdcallinfo-uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","meta.helm.sh/release-name":"epdcallinfouat","meta.helm.sh/release-namespace":"default","nginx.ingress.kubernetes.io/affinity":"cookie","nginx.ingress.kubernetes.io/configuration-snippet":"more_set_headers \"Access-Control-Allow-Origin: $http_origin\";\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-methods":"PUT, GET, [...]
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: epdcallinfouat
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE,
      PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/service-weight: ""
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/upstream-hash-by: $http_x_forwarded_for
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2025-02-07T08:24:04Z"
  generation: 1
  name: epdcallinfouat-ingress
  namespace: default
  resourceVersion: "157602806"
  uid: c6ac3251-e754-4b7e-affe-00384685bf97
spec:
  rules:
  - host: epd-avaya-callinfo-uat.domain.callcentre.com
    http:
      paths:
      - backend:
          service:
            name: epdcallinfouat
            port:
              number: 8090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - epd-avaya-callinfo-uat.domain.callcentre.com
    secretName: avayaonecx
