epdcallinfo-uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"epdcallinfouat","meta.helm.sh/release-namespace":"default"},"labels":{"app.kubernetes.io/instance":"epdcallinfouat","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"epdcallinfouat","app.kubernetes.io/version":"0.0.1","helm.sh/chart":"epdcallinfouat-0.0.1"},"name":"epdcallinfouat","namespace":"default"},"spec":{"ports":[{"port":8090,"protocol":"TCP","targetPort":8090}],"selector":{"app [...]
    meta.helm.sh/release-name: epdcallinfouat
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-02-07T07:58:14Z"
  labels:
    app.kubernetes.io/instance: epdcallinfouat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: epdcallinfouat
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: epdcallinfouat-0.0.1
  name: epdcallinfouat
  namespace: default
  resourceVersion: "11028649"
  uid: 29c5ad1d-b1c8-4e90-89a2-efd4463a5b66
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app.kubernetes.io/instance: epdcallinfouat
    app.kubernetes.io/name: epdcallinfouat
  sessionAffinity: None
  type: ClusterIP
